--- a/_posts/2020-01-02-the-us-narrative-today.html
+++ b/_posts/2020-01-02-the-us-narrative-today.html
@@ -1693,107 +1693,107 @@ stories:
   domain: http://www.timeswv.com/
   link: https://www.timeswv.com/nicholls-st-west-virginia-basketball/image_ef485248-2daf-11ea-a5eb-d71069cc9649.html
 images:
-- name: store-on-corner-store-smoking-cigarette.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-smoking-cigarette.jpg
-- name: ellis-island-ellis-island-room-kandinsky-bv.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-kandinsky-bv.jpg
-- name: old-door-lock-old-door-lock-2-yellow-collage.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-yellow-collage.jpg
-- name: old-school-house-old-schoolhouse-yellow-collage.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-yellow-collage.jpg
-- name: crow_atari_asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_atari_asteroids.jpg
-- name: machine-road-machine-road-copper-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-copper-circuit.jpg
-- name: rain-princess-british-black-cab-street.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-british-black-cab-street.jpg
-- name: cargo-ship-cargo-ship-on-sea-copper-circuit-2.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-copper-circuit-2.jpg
-- name: stories-new-27-93-800-500-0-max-0--1--1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-27-93-800-500-0-max-0--1--1.jpg
-- name: border-fence-border-fence-on-hill-really-hot.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-really-hot.jpg
-- name: nazi-invasion-bletchley-computer-racks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-bletchley-computer-racks.jpg
-- name: crow_alien_goggles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_alien_goggles.jpg
-- name: downtheline-downtheline-yellow-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-yellow-paper.jpg
-- name: copper-circuit-seattle-shipping-people-walking.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-seattle-shipping-people-walking.jpg
-- name: store-on-corner-oldcabin-ww2-color.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-ww2-color.jpg
-- name: aws-s3-stories-server-racks-clouds-copper-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-server-racks-clouds-copper-circuit.jpg
-- name: stalin-time-border-down-the-fence-line.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-border-down-the-fence-line.jpg
-- name: nyc-flag-nycflag-far-away.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-far-away.jpg
-- name: old-school-house-old-schoolhouse-blue-electricity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-blue-electricity.jpg
-- name: stories-downtheline-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-downtheline-dali-three.jpg
-- name: downtheline-downtheline-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-dark-dali.jpg
-- name: store-on-corner-oldcabin-post-modern.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-post-modern.jpg
-- name: stalin-time-water-fountain-many-shooting.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-water-fountain-many-shooting.jpg
-- name: copper-circuit-small-town-street-2.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-small-town-street-2.jpg
-- name: window-window-gan-vogh.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-gan-vogh.jpg
-- name: razorcliff-razorcliff-colorful-dream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-colorful-dream.jpg
-- name: server-cloud-server-racks-door-diego-rivera1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-diego-rivera1.jpg
-- name: death-valley-death-valley-national-park-diego-rivera1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-diego-rivera1.jpg
-- name: stalin-time-walk-through-garden-tunnel.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-walk-through-garden-tunnel.jpg
-- name: old-cabin-oldcabin-deep-connections.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-deep-connections.jpg
-- name: meadowbutterfly-meadow-butterfly-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-aqua.jpg
-- name: copper-circuit-small-lighthouse_36556509232_o.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-small-lighthouse_36556509232_o.jpg
-- name: san-francisco-street-view-san-francisco-street-view-umberto-bocc.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-umberto-bocc.jpg
-- name: nazi-invasion-IMG_2971.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-IMG_2971.jpg
-- name: bf-skinner-satellite-dish-pointing-upwards.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-satellite-dish-pointing-upwards.jpg
-- name: copper-circuit-cemetery_36690406946_o.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-cemetery_36690406946_o.jpg
-- name: yosemite-yosemite-smooth-ride.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-smooth-ride.jpg
-- name: oldcabin-store-graham-sutherland.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-graham-sutherland.jpg
-- name: oldcabin-oldcabin-dark-soul.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-dark-soul.jpg
-- name: ellis-island-ellis-island-room-crunch-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-crunch-paper.jpg
-- name: razorwire-DSC-0080-alien-goggles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-alien-goggles.jpg
-- name: cargo-ship-cargo-ship-on-sea-deep-connections.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-deep-connections.jpg
-- name: meadowbutterfly-meadow-butterfly-deep-connections.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-deep-connections.jpg
-- name: old-gas-pumps-oldgaspumps-smooth-ride.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-smooth-ride.jpg
-- name: miamibeach-miamibeach-crafty-painting.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-crafty-painting.jpg
-- name: bluelake-blue-granite-file-00-00-38-67.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-blue-granite-file-00-00-38-67.jpg
-- name: mosaic-face-mosaic-face-ww2-color.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-ww2-color.jpg
-- name: stalin-time-border-crossing-through-fence-2.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-border-crossing-through-fence-2.jpg
-- name: copper-circuit-border-fence-down-the-line.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-border-fence-down-the-line.jpg
-- name: san-francisco-street-view-san-francisco-street-view-horiz-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-horiz-circuit.jpg
-- name: old-church-oldchurch-purple-pond.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-purple-pond.jpg
+- name: statue-of-liberty-front-view-statueofliberty-post-modern.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-post-modern.jpg
+- name: bluelake-hot-spicy-file-00-01-17-38.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-hot-spicy-file-00-01-17-38.jpg
+- name: mediterranean-mediterranean-post-modern.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-post-modern.jpg
+- name: hollywood-building-hollywood-building-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-rainbow-festival.jpg
+- name: castle-wall-DSC-0067-kand-two.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-kand-two.JPG
+- name: server-cloud-server-racks-door-colorful-dream.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-colorful-dream.jpg
+- name: san-francisco-city-bridge-sf-city-bridge-free-woman.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-free-woman.jpg
+- name: meadowbutterfly-meadow-butterfly-blue-electricity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-blue-electricity.jpg
+- name: old-barn-old-barn-1500-gred-mash.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-gred-mash.jpg
+- name: nazi-invasion-cemetery_36690406946_o.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-cemetery_36690406946_o.jpg
+- name: scream-IMG_7319.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/scream-IMG_7319.jpg
+- name: oldbarn-oldbarn-sand-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-sand-paper.jpg
+- name: old-door-lock-old-door-lock-green-zuma.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-green-zuma.jpg
+- name: copper-circuit-IMG_6200.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-IMG_6200.jpg
+- name: abandonedbuildings_dark_soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_dark_soul.jpg
+- name: redondo-beach-harbor-redondo-beach-harbor-copper-circuit-2.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/redondo-beach-harbor-redondo-beach-harbor-copper-circuit-2.jpg
+- name: locked-up-steam-lock-up-steam-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-aqua.jpg
+- name: store-on-corner-store-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-light-dali.jpg
+- name: castle-wall-DSC-0067-constitution.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-constitution.JPG
+- name: walled-garden-walled-garden-yellow-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-yellow-paper.jpg
+- name: gypsymosaic-gypsy-eyes-crafty-painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-crafty-painting.jpg
+- name: rain-princess-border-watching-cars.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-border-watching-cars.jpg
+- name: stalin-time-highway-granary_36331800650_o.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-highway-granary_36331800650_o.jpg
+- name: old-barn-old-barn-1500-kand-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-kand-two.jpg
+- name: dc-statue-dcstatue-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-rainbow-festival.jpg
+- name: castle-on-hill-castle-on-hill-edinburgh-free-woman.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-free-woman.JPG
+- name: soldier-kneeling-26304845730-d4e495e25f-o-free-woman.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-free-woman.jpg
+- name: rain-princess-IMG_7954.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-IMG_7954.jpg
+- name: oldhouse-oldhouse-copper-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-copper-circuit.jpg
+- name: braceros-domingo-ulloa-google-front-of-business.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-google-front-of-business.jpg
+- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-satan-red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-satan-red.jpg
+- name: stories-new-54-32-800-500-0-max-0--5--1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-54-32-800-500-0-max-0--5--1.jpg
+- name: window-window-constitution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-constitution.jpg
+- name: oldhouse-granaryfield-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-creativity.jpg
+- name: gypsy-wagon-gypsywagon-graham-sutherland.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-graham-sutherland.jpg
+- name: beach-clouds-lifeguard-beachclouds-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-dry-skin.jpg
+- name: oldroad-old-road-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-dali-three.jpg
+- name: old-church-oldchurch-sand-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-sand-paper.jpg
+- name: meadowbutterfly-meadow-butterfly-purple-storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-purple-storm.jpg
+- name: carry-load-carryload-kandinsky-bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-kandinsky-bv.jpg
+- name: hollywood-building-hollywood-building-space-pizza.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-space-pizza.jpg
+- name: nazi-invasion-old-computer-bletchley-crypto.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-old-computer-bletchley-crypto.jpg
+- name: death-valley-death-valley-national-park-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-internet-numbers.jpg
+- name: fence-fence-smooth-ride.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-smooth-ride.jpg
+- name: locked-up-steam-lock-up-steam-crafty-painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-crafty-painting.jpg
+- name: braceros-domingo-ulloa-san-francisco-salesforce-bay-bridge.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-san-francisco-salesforce-bay-bridge.jpg
+- name: statue-of-liberty-front-view-statueofliberty-plentiful.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-plentiful.jpg
+- name: los-angeles-from-observatory-losangeles-from-observatory-colored-circuits.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-colored-circuits.jpg
+- name: cargo-ship-cargo-ship-on-sea-crunch-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-crunch-paper.jpg
+- name: stalin-time-surveillance-over-the-city.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-surveillance-over-the-city.jpg
+- name: white-house-lawn-white-house-lawn-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-smoking-cigarette.jpg
 ---
 Sabres Trade Scandella To Montreal; Acquire Flames' Frolik.&nbsp;New Beaumont Research Puts Scientists One Step Closer To Newborn Screening For Autism.&nbsp;Residents Continue Flood Cleanup.&nbsp;Churches Set To Ring In New Year.&nbsp;Uber Completes Acquisition Of Careem.&nbsp;Bengals, Lions Staffs To Coach In Senior Bowl.&nbsp;Soo School Break Extended As Area Deals With Power Outages.&nbsp;Zoo Director Takes Monkeys And Pandas Home To Save Them From Deadly Wildfires.&nbsp;
